[package]
name = "mouseTOOL"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI框架
eframe = "0.31.1"
egui = "0.31.1"

# 跨平台鼠标控制
enigo = "0.5.0"

# 跨平台设备状态查询（用于拾取坐标）
device_query = "2.1.0"

# Linux平台可能需要的依赖
[target.'cfg(target_os = "linux")'.dependencies]
# 如果在某些Linux发行版上遇到问题，可以取消注释以下依赖
# x11 = "2.21"
# libc = "0.2"

# macOS平台依赖
[target.'cfg(target_os = "macos")'.dependencies]
# macOS的Core Graphics支持通过enigo自动处理

# Windows平台依赖
[target.'cfg(target_os = "windows")'.dependencies]
# Windows API支持通过enigo自动处理

# 可选功能
[features]
default = ["serde"]
serde = ["enigo/serde"]